# cbil

./: .gitignore  CbilLib.cabal  README.md  cbil.cabal  example.xml  example2.xml
example/: README.md  cbilExample.cabal  stack.yaml
example/src/: Main.hs
porcelain/: README.md  cbilPorcelain.cabal  manifest.example.xml  porcelain.xml
porcelain/Template/ID/Current/: cbil.local.xml
porcelain/Template/SUB/Current/: cbil.local.xml
porcelain/src/: Main.hs
src/: CbilLib.hs  Main.hs
src/CbilLib/: Utils.hs
