name:                CbilLib
version:             1.5.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cbil#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     CbilLib
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, shake>=0.17.7, directory, hxt, bytestring, stringsearch, split, containers
